Update demo to vue 2.2.0 and fix delete node error

--- a/demo/demo-vue2.html
+++ b/demo/demo-vue2.html
@@ -12,7 +12,7 @@
     <vue-tree :option="option"></vue-tree>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.3/vue.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.2.0/vue.min.js"></script>
 <script src="../src/tree.vue.js"></script>
 <script src="demo.js"></script>
 </body>
